<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/back_to_parent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrow"
        android:layout_margin="20dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_to_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up_dialog"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailInput_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/user"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/passwordInput_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/passwordInput_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="12dp"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/telephone"
            android:drawablePadding="12dp"
            android:hint="@string/phone_number"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/id"
            android:drawablePadding="12dp"
            android:hint="@string/fullName"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <android.widget.Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/register_dialog"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>