<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/management32"
            android:layout_gravity="center_horizontal"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_layout"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:padding="18dp"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user"
                android:background="@drawable/custom_input"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:padding="18dp"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:drawablePadding="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/padlock"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:textSize="15sp"
                android:text="@string/forgot"/>

            <android.widget.Button
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/another_way"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/login_form"
        android:layout_marginTop="10dp"
        app:cardElevation="10dp"
        android:elevation="8dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/another_connect"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <android.widget.Button
                    android:id="@+id/facebook"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:background="@drawable/custom_fb_btn"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/facebook24"
                    android:textAlignment="viewStart"
                    android:fontFamily="sans-serif"
                    android:drawablePadding="14dp"
                    android:textStyle="bold"
                    android:layout_marginStart="50dp"
                    android:padding="10dp"
                    android:textAllCaps="false"/>

                <android.widget.Button
                    android:id="@+id/gmail"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gmail"
                    android:background="@drawable/custom_gmail_btn"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/google_plus"
                    android:textAlignment="viewStart"
                    android:fontFamily="sans-serif"
                    android:drawablePadding="20dp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:layout_marginStart="40dp"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/another_way"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/do_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/register"/>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/do_not_have_account"
            android:text="@string/sign_up"
            android:textColor="@color/light_blue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>